# docker-arm-cross-toolchain

./: .gitignore  Dockerfile  LICENSE  README.md  aarch64-rpi3-linux-gnu.config  aarch64-rpi3-linux-gnu.defconfig  aarch64-rpi3-linux-gnu.env  arm-pico-eabi.defconfig  arm-pico2-eabi.defconfig  armv6-rpi-linux-gnueabihf.config  armv6-rpi-linux-gnueabihf.defconfig  armv6-rpi-linux-gnueabihf.env  armv6-rpi3-linux-gnueabihf.defconfig  armv8-rpi3-linux-gnueabihf.config  armv8-rpi3-linux-gnueabihf.defconfig  armv8-rpi3-linux-gnueabihf.env
.github/workflows/: README.md  docker-publish.yml
cmake/: Common.toolchain.cmake  cmake-kits.json
cmake/aarch64-rpi3-linux-gnu/: aarch64-rpi3-linux-gnu.toolchain.cmake  aarch64-rpi4-linux-gnu.toolchain.cmake  aarch64-rpi5-linux-gnu.toolchain.cmake
cmake/arm-pico-eabi/: arm-pico-eabi.toolchain.cmake
cmake/arm-pico2-eabi/: arm-pico2-eabi.toolchain.cmake
cmake/armv6-rpi-linux-gnueabihf/: armv6-rpi-linux-gnueabihf.toolchain.cmake  armv6-rpi2-linux-gnueabihf.toolchain.cmake
cmake/armv8-rpi3-linux-gnueabihf/: armv8-rpi3-linux-gnueabihf.toolchain.cmake  armv8-rpi4-linux-gnueabihf.toolchain.cmake  armv8-rpi5-linux-gnueabihf.toolchain.cmake
patches/gcc/12.4.0/: zstd.patch
patches/gcc/13.3.0/: zstd.patch
patches/gcc/14.2.0/: zstd.patch
pico/: Dockerfile  arm-pico-eabi.config  arm-pico-eabi.defconfig
profiles/: aarch64-rpi3-linux-gnu.conan  armv6-rpi-linux-gnueabihf.conan
recipes/docker-arm-cross-toolchain/: config.yml
test/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  hello.c  hello.cpp  hello.f90  test-all.sh  test.sh
(+3 files in other folders)
